Fixed shift helpers & employee profile views

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -156,6 +156,9 @@ h3 {
   -moz-border-radius: 8px;
   border-radius: 8px;
 }
+a.button {
+  text-decoration: none;
+}
 
 a.button:hover {
   i {
